[package]
name = "lsm303dlhc-ng"
version = "0.3.2"
authors = ["Markus Mayer <widemeadows@gmail.com>", "Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with the LSM303DLHC (accelerometer + compass)"
keywords = ["embedded-hal-driver", "accelerometer", "compass", "MEMS", "IMU"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sunsided/lsm303dlhc"
repository = "https://github.com/sunsided/lsm303dlhc"
edition = "2021"
rust-version = "1.64"

[features]
default = ["accelerometer"]
accelerometer = ["dep:accelerometer"]
defmt = ["dep:defmt", "lsm303dlhc-registers/defmt"]

[dependencies]
accelerometer = { version = "0.12.0", optional = true }
bitfield-struct = "0.8.0"
cast = { version = "0.3.0", default-features = false }
defmt = { version = "0.3.8", optional = true }
embedded-hal = "0.2.7"
generic-array = "1.0.0"
lsm303dlhc-registers = "0.1.1"

[dev-dependencies]
test-format = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
